add maven opts comment in parent pom